# voter-api

./: .coderabbit.yaml  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  ENV  Procfile  README.md  SECURITY.md  code-review-003-address-geocoding.md  docker-compose.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: election.calendar.md  election.enrich.md  election.normalize.md  election.pipeline.md  election.process.md  hatchkit.prcheck.md  hatchkit.prfix.md
.github/workflows/: build-push.yaml  ci.yml  claude.yml  claude_review_fixer.yml  e2e.yml  preview-cleanup.yml  preview-deploy.yml  preview-gc.yml  prod-deploy.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.2-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.specify/memory/: constitution.md
alembic/: env.py
alembic/versions/: 001_initial_users_and_audit_logs.py  002_voters_and_import_jobs.py  003_geocoded_locations_and_cache.py  004_boundaries.py  005_analysis_runs_and_results.py  006_voter_search_indexes.py  007_export_jobs.py  008_add_geocoded_locations_voter_fk.py  009_add_analysis_results_fks.py  010_county_districts.py  011_county_metadata.py  012_precinct_metadata.py  013_backfill_geocoder_cache_address_ids.py  014_add_matched_address_to_geocoder_cache.py  015_elected_officials.py  015_election_tracking.py  016_add_precinct_metadata_index.py  017_elected_officials.py  018_add_precinct_county_sos_id_index.py  019_add_ballot_item_id.py  020_widen_voter_columns.py  021_widen_more_voter_columns.py  022_voter_history.py  023_add_voters_trgm_indexes.py  023_create_meeting_records_tables.py  024_create_meeting_records_tables.py  025_create_password_reset_tokens.py  025_user_fk_set_null_on_delete.py  026_create_password_reset_tokens.py  026_create_user_invites.py  026_normalize_voter_registration_numbers.py  027_cleanup_duplicate_voter_history_elections.py  027_create_totp_auth.py  027_create_user_invites.py  028_create_passkeys.py  028_create_totp_auth.py  028_election_district_resolution.py  029_create_passkeys.py  030_add_gin_index_analysis_results_mismatch_details.py  030_normalize_voter_registration_numbers.py  (+22 more)
argocd/: voter-api-dev-app.yaml  voter-api-prod-app.yaml
data/: 2014.zip.sha512.txt  2015.zip.sha512.txt  2016.zip.sha512.txt  2017.zip.sha512.txt  2018.zip.sha512.txt  2019.zip.sha512.txt  2020.zip.sha512.txt  2021.zip.sha512.txt  2022.zip.sha512.txt  2023.zip.sha512.txt  2024.zip.sha512.txt  2025.zip.sha512.txt  2026.zip.sha512.txt  DATA_QUALITY_REPORT.md  data.md  manifest.json
data/candidates/: albert-chester-gibbs-82386174.md  andrea-carrima-cooke-a5f25182.md  andrew-underwood-d2a3a1f3.md  atha-h-pryor-0f45c05c.md  audrey-taylor-lux-ac7df693.md  beau-brown-e23fa2d4.md  blake-elsberry-87252f6f.md  brian-stover-63844c93.md  christian-michael-hurd-5f4892fb.md  clayton-mclean-fuller-5f19bf6e.md  colton-moore-16326a06.md  david-carson-c26fa03d.md  denise-pierce-burns-fc2f08d3.md  edward-charles-foster-212d1d1b.md  eric-cunningham-9f0284c1.md  ezee-zeke-carter-28cf446b.md  ikenna-emmanuel-ugwumadu-2bd0813c.md  james-edward-tully-4692a2e0.md  james-marty-brown-f32c411a.md  jared-craig-105ea865.md  jennifer-jaye-turnipseed-3ecaab98.md  jim-davis-f8e33988.md  john-bentley-jack-zibluk-2df1e8e0.md  jonathan-hobbs-0ee24e02.md  julie-locke-0b87f05e.md  karen-gordon-682e505a.md  kelly-kautz-d9ac4446.md  kendrick-muke-mcbride-26535f1e.md  lafawn-s-pinkney-mealing-5e890d74.md  landon-alan-justice-ad23ba48.md  lanny-thomas-819c2076.md  larry-e-hilley-c99ad399.md  megahn-strickland-bcfeba39.md  nicky-lama-e890fa9e.md  reagan-box-af1f5947.md  rob-rush-ruszkowski-a42fdcf1.md  rojelio-roy-alvarran-c1f8b506.md  shaqunta-q-calles-d7e79fa3.md  shawn-harris-69aefd26.md  sheila-clark-nelson-b9baf9a0.md  (+9 more)
data/elections/: 2026-03-17-bibb-commission-district-5.md  2026-03-17-buchanan-mayor.md  2026-03-17-clayton-probate-judge.md  2026-03-17-special-election.md  2026-03-17-wadley-council-member.md  2026-05-19-agriculture-commissioner.md  2026-05-19-appling.md  2026-05-19-atkinson.md  2026-05-19-attorney-general.md  2026-05-19-bacon.md  2026-05-19-baker.md  2026-05-19-baldwin.md  2026-05-19-banks.md  2026-05-19-barrow.md  2026-05-19-bartow.md  2026-05-19-benhill.md  2026-05-19-berrien.md  2026-05-19-bibb.md  2026-05-19-bleckley.md  2026-05-19-brantley.md  2026-05-19-brooks.md  2026-05-19-bryan.md  2026-05-19-bulloch.md  2026-05-19-burke.md  2026-05-19-butts.md  2026-05-19-calhoun.md  2026-05-19-camden.md  2026-05-19-candler.md  2026-05-19-carroll.md  2026-05-19-catoosa.md  2026-05-19-charlton.md  2026-05-19-chatham.md  2026-05-19-chattahoochee.md  2026-05-19-chattooga.md  2026-05-19-cherokee.md  2026-05-19-clarke.md  2026-05-19-clay.md  (+155 more)
docker/: entrypoint.sh
docs/: election-search-api-report.md  frontend-integration-guide.md  ga-sos-data-import-gap-analysis.md  k8s-deployment-guide.md  macon-bibb-data-report.md  pipeline-walkthrough.md
logs/: status_line.json
scripts/: generate_candidate_jsonl.py
tests/: conftest.py
tools/: generate_jsonl_docs.py
(+1095 files in other folders)
